[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dockmon-cli"
version = "0.1.0"
description = "CLI tool for monitoring Docker containers via a dockmon API server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["requests"]

[project.scripts]
dockmon-cli = "dockmon_cli:main"
